updating style to fix the bug where the image pagination bar appeared too low in ie browsers. Overwrite default university style for table tags.
git-svn-id: https://source.caret.cam.ac.uk/svn/projects/ul-foundations/foundationsviewer/trunk@9437 59899196-baf2-4bc4-a94d-4a08719e171f

--- a/src/main/webapp/styles/style.css
+++ b/src/main/webapp/styles/style.css
@@ -34,7 +34,7 @@ html {
 	height: 3px;
 }
 
-#metadata-physicalLocation,#metadata-shelfLocation,#metadata-subject,#metadata-dateCreatedDisplay, #metadata-page
+#metadata-physicalLocation,#metadata-shelfLocation,#metadata-subject,#metadata-dateCreatedDisplay,#metadata-page
 	{
 	font-weight: bold;
 }
@@ -65,7 +65,6 @@ body {
 	background-color: #FFFFFF;
 	padding: 18px 0 0 0;
 }
-
 
 h3,h2,h1,h4 {
 	line-height: 18px;
@@ -146,8 +145,8 @@ ol#index_carousel li {
 }
 
 .footer a:link,.footer a:visited,.footer a:active {
-    color: #FFFFFF;
-    text-decoration: underline;
+	color: #FFFFFF;
+	text-decoration: underline;
 }
 
 .news {
@@ -161,6 +160,13 @@ ol#index_carousel li {
 .x-toolbar-default {
 	border: 0;
 }
+
+/* overwrite the university style for the bottom margin as
+ this is conflicting with the Ext Style, esp in ie */
+table {
+	margin-bottom: 0px;
+}
+
 /*
 .x-panel-header-text-default {
 	color: #000000;
